tests/type_errors/eq_trait_violation.nos
# expect_error: type mismatch
# Test: comparing incompatible types with ==

main() = {
    a = 42
    b = "hello"
    a == b  # Int vs String
}
